--- a/css/style.css
+++ b/css/style.css
@@ -36,4 +36,27 @@
   background-color: #000;
 }
 
+#sidebar {
+  position: fixed;
+  right: 0%;
+  background-color: red;
+  height: 100%;
+  width: 20%;
+}
 
+#sidebar-container ul {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+}
+
+#sidebar-container ul li a {
+  display: block;
+  padding: 15px 0;
+  color: #fff;
+  text-decoration: none;
+}
+
+#sidebar-container ul li a:hover {
+  background-color: #000;
+}
